--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,21 +5,21 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "nodemon",
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "nodemon",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "@supabase/supabase-js": "^2.38.0",
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "nodemon": "^3.0.1",
-      "openai": "^3.2.0",
-      "stripe": "^14.2.0",
-      "supabase": "^1.106.1"
+        "@supabase/supabase-js": "^2.38.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "nodemon": "^3.0.1",
+        "openai": "^3.2.0",
+        "stripe": "^14.2.0",
+        "supabase": "^1.106.1",
+        "xlsx": "^0.18.5"
     }
-  }
-  
+}
