--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "openai": "^3.2.0",
         "stripe": "^14.2.0",
         "supabase": "^1.106.1",
-        "xlsx": "^0.18.5"
+        "xlsx": "^0.18.5",
+        "pdfkit" : "^0.14.0"
     }
 }
