--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
         "express": "^4.18.2",
         "nodemon": "^3.0.1",
         "openai": "^3.2.0",
+        "pandas": "^0.0.3",
+        "pdfkit": "^0.14.0",
         "stripe": "^14.2.0",
         "supabase": "^1.106.1",
-        "xlsx": "^0.18.5",
-        "pdfkit" : "^0.14.0"
+        "xlsx": "^0.18.5"
     }
 }
